--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 	margin: auto;
 	padding: 20px;
 	background-color: #f5f5f5;
-	border-radius: 80px;
+	border-radius: 15px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
@@ -16,7 +16,7 @@
 	width: 100%;
 	padding: 8px;
 	margin-top: 5px;
-	border: 1px solid #ccc;
+	border: 1px solid #8fb4ff; /* Border color light blue */
 	border-radius: 4px;
 	box-sizing: border-box;
 	font-size: 14px;
@@ -25,11 +25,11 @@
   p {
 	margin-top: 20px;
 	font-size: 16px;
-	color: #333;
+	color: #555; /* Dark gray */
   }
   
   strong {
-	color: #009688;
+	color: #4caf50; /* Green */
   }
   
   .button-container {
@@ -41,5 +41,13 @@
 	margin-right: 10px;
 	font-size: 14px;
 	cursor: pointer;
+	background-color: #ff8c00; /* Dark orange */
+	color: #fff; /* White text */
+	border: none;
+	border-radius: 4px;
+  }
+  
+  .custom-button:hover {
+	background-color: #ffaa33; /* Light orange on hover */
   }
   
