--- a/style.css
+++ b/style.css
@@ -5,49 +5,107 @@
 	background-color: #f5f5f5;
 	border-radius: 15px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  label {
+}
+
+label {
 	display: block;
 	margin: 15px 0;
-  }
-  
-  input {
+}
+
+input {
 	width: 100%;
 	padding: 8px;
 	margin-top: 5px;
-	border: 1px solid #8fb4ff; /* Border color light blue */
+	border: 1px solid #8fb4ff;
+	/* Border color light blue */
 	border-radius: 4px;
 	box-sizing: border-box;
 	font-size: 14px;
-  }
-  
-  p {
+}
+
+p {
 	margin-top: 20px;
 	font-size: 16px;
-	color: #555; /* Dark gray */
-  }
-  
-  strong {
-	color: #4caf50; /* Green */
-  }
-  
-  .button-container {
+	color: #555;
+	/* Dark gray */
+}
+
+strong {
+	color: #4caf50;
+	/* Green */
+}
+
+.button-container {
 	margin-top: 15px;
-  }
-  
-  .custom-button {
+}
+
+.custom-button {
 	padding: 8px 12px;
 	margin-right: 10px;
 	font-size: 14px;
 	cursor: pointer;
-	background-color: #ff8c00; /* Dark orange */
-	color: #fff; /* White text */
+	background-color: #ff8c00;
+	/* Dark orange */
+	color: #fff;
+	/* White text */
 	border: none;
 	border-radius: 4px;
-  }
-  
-  .custom-button:hover {
-	background-color: #ffaa33; /* Light orange on hover */
-  }
-  
+}
+
+.custom-button:hover {
+	background-color: #ffaa33;
+	/* Light orange on hover */
+}
+
+
+.toggle-area {
+	/* background-color: blueviolet; */
+	display: flex;
+	flex-direction: row;
+}
+
+#toggle-area-text {
+	font-size: large;
+	/* margin-left: 20px; */
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	margin-left: 2%;
+}
+
+.toggle-btn {
+	background-color: #009688;
+	border: 1px solid black;
+	border-radius: 99px;
+	width: 50px;
+	height: 28px;
+	transition: background-color 0.1s ease, border-color 0.2s ease;
+	cursor: pointer;
+	position: relative;
+}
+
+.toggle-btn .thumb {
+	height: 20px;
+	width: 20px;
+	background-color: #f5f5f5;
+	border-radius: 99px;
+	transition: left 0.15s ease, transform 0.15s ease;
+	position: absolute;
+	left: 3px;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.toggled {
+	background-color: #009688;
+}
+
+.toggle-btn:hover {
+	border-color: #333;
+}
+
+.toggled .thumb {
+	left: calc(100% - 25px);
+	/* Moving thumb to the right side */
+}
